--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/vite": "^4.1.17",
     "daisyui": "^5.5.5",
     "gh-pages": "^6.3.0",
+    "lenis": "^1.3.15",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
